# aqueous-electrolyte-sdl

./: .gitignore  README.md  pyproject.toml  run_experiments.ipynb
config/: conductivity_optimiser.json  electrolyte_recipe.yaml  hardware_config.yaml  protocol.yaml
dev/: bluetooth.py
src/: electrochem_system.py  pump_controller.py  pump_controller_ble.py  scheduler.py  squidstat.py  temperature_controller.py  test_cell.py
